[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/graph/icons/icon.png" type="Texture" id=1]
[ext_resource path="res://assets/style/menu_text_input.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/style/menu_text_focus.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/Game/game.gd" type="Script" id=5]
[ext_resource path="res://scenes/customNode/Json/json.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Game/Label.gd" type="Script" id=7]
[ext_resource path="res://assets/UI/button/right-arrow.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/button/IconAdd.png" type="Texture" id=9]
[ext_resource path="res://scripts/Button.gd" type="Script" id=11]
[ext_resource path="res://scripts/textAnim.gd" type="Script" id=12]
[ext_resource path="res://assets/input.tres" type="DynamicFont" id=13]
[ext_resource path="res://scenes/Lobby/addPlayerButton.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "add_player_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../AddPlayerInput:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AddPlayerInput:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../AddPlayerMenu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Button:mouse_filter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "add_player_show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../AddPlayerInput:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AddPlayerInput:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../AddPlayerMenu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Button:mouse_filter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../AddPlayerInput:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../AddPlayerInput:text")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -650, 767 ), Vector2( -498, 767 ), Vector2( -574, 767 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPlayerInput" type="LineEdit" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 400.0
margin_right = -320.0
margin_bottom = -2000.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 1000, 0 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 13 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Nom du joueur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="AddPlayerInput"]
margin_left = 1279.9
margin_top = 160.015
margin_right = 1812.9
margin_bottom = 693.015
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="AddPlayerInput"]
margin_left = 400.0
margin_top = 960.0
margin_right = 1920.0
margin_bottom = 2462.0
rect_scale = Vector2( 0.316, 0.316 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -650.0
margin_top = 767.0
margin_right = 78.0
margin_bottom = -528.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 90.0
rect_pivot_offset = Vector2( 1290.84, 722.671 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "
azertyuioopqsdfhjgfkmlùm frezs fsdreza azmh azùehzam fqjlsdhmhfjsdq fhlqsdjmfh
fjkedsmùmfdsjkf"
align = 1
valign = 1
autowrap = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="json" parent="Label" instance=ExtResource( 6 )]
question = true
limited = true

[node name="cercles" parent="Label" instance=ExtResource( 6 )]
LINES = "res://assets/data/cercles.json"

[node name="events" parent="Label" instance=ExtResource( 6 )]
LINES = "res://assets/data/event.json"
event = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
anims/add_player_hide = SubResource( 1 )
anims/add_player_show = SubResource( 2 )
anims/texte_start = SubResource( 3 )
script = ExtResource( 12 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="analytics" type="HTTPRequest" parent="."]
use_threads = true

[node name="AddPlayerMenu" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1337.91
margin_top = 59.8185
margin_right = 147.907
margin_bottom = -2250.18
rect_rotation = 90.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="AddPlayerInput" to="AddPlayerInput/TextureButton" method="_on_AddPlayerInput_text_changed"]
[connection signal="addPlayer" from="AddPlayerInput/TextureButton" to="Label/AnimationPlayer" method="_on_TextureButton_addPlayer"]
[connection signal="pressed" from="AddPlayerInput/TextureButton" to="AddPlayerInput/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="Label" method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="Label/AnimationPlayer" method="_on_Button_pressed"]
[connection signal="pressed" from="AddPlayerMenu" to="Label/AnimationPlayer" method="_on_AddPlayerMenu_pressed"]
